# floodfire-nlp

./: .gitignore  .pre-commit-config.yaml  README.md  config.ini.example  keyword_count.py  lda.py  pyproject.toml  segment2csv.py  test-jieba.py  test-single.py
dict/: stop_words_zh.txt  user_dict.txt
floodfire/process/: preprocessing.py
floodfire/storage/: mariadb.py
