[tool.poetry]
name = "floodfire-nlp"
version = "0.1.0"
description = ""
authors = ["Tuvix Shih <tuvix@beehivedt.com>"]
readme = "README.md"
packages = [{include = "floodfire-nlp"}]

[tool.poetry.dependencies]
python = "^3.10"
jieba = "^0.42.1"
lxml = "^4.9.2"
demoji = "^1.1.0"
mysqlclient = "^2.1.1"
gensim = "^4.3.1"
pyldavis = "^3.4.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
black = "^23.3.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
target-version = ['py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[tool.isort]
# make it compatible with black
profile = "black"
